Cluster-Setup/LAB-01/backend_ingress_networkpolicy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: backend-ingress
  namespace: g04 
spec:
  podSelector:
    matchLabels:
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: orion
      podSelector:
        matchLabels:
          tier: frontend
    ports:
    - protocol: TCP
      port: 3000
